Finished refactoring / unit testing RollupEvaluator, allowing us to take the paved road toward nested conditional statements. Wrote a failing test - wrote the implementation necessary to unpack nested conditionals into a single list of conditional statements. Now all that's left is rebalancing the concept of equality to play nice with nested conditionals - all thanks to our failing test!

--- a/rollup/main/default/classes/Rollup.cls
+++ b/rollup/main/default/classes/Rollup.cls
@@ -1010,13 +1010,6 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
       SObjectField lookupFieldOnOpObject = getSObjectFieldByName(lookupObjectDescribe, rollupMetadata.LookupFieldOnLookupObject__c);
       SObjectField rollupFieldOnOpObject = getSObjectFieldByName(lookupObjectDescribe, rollupMetadata.RollupFieldOnLookupObject__c);
 
-      // TODO: if they're **BOTH** not null ...
-      if (eval == null && String.isNotBlank(rollupMetadata.ChangedFieldsOnCalcItem__c)) {
-        eval = new RollupEvaluator.SObjectChangedFieldEvaluator(rollupMetadata.ChangedFieldsOnCalcItem__c.split(','), oldCalcItems);
-      } else if (eval == null && String.isNotBlank(rollupMetadata.CalcItemWhereClause__c)) {
-        eval = new RollupEvaluator.WhereFieldEvaluator(rollupMetadata.CalcItemWhereClause__c, sObjectType);
-      }
-
       Id rollupLimitId;
       if (rollupMetadata.Id != null) {
         // for CMDT-driven rollups, we can tie the rollup operation straight to a RollupLimit__mdt record
@@ -1036,7 +1029,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
         calcItems,
         oldCalcItems,
         batchRollup,
-        eval,
+        eval != null ? eval : RollupEvaluator.getEvaluator(rollupMetadata, oldCalcItems, sObjectType),
         rollupLimitId,
         rollupInvokePoint,
         rollupMetadata.FullRecalculationDefaultNumberValue__c,
